# tensor-viterbi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.lumi  CMakeLists.txt.old  Makefile  README.md  REPRODUCING.md  architectures.yaml  bench  benchmark_params.cfg  benchmark_params_stress.cfg  benchmark_to_log_space.py  compile.py  compile.sh  compile_lumi.sh  data_generator.py  gene_labels.txt  generate_sleep_data.py  gff3_downloader.py  library.txt  likwid_one.sh  likwid_one.slurm  out.txt  plot_benchmark.py  plot_speedup_heatmap.py  print_status.py  pyproject.toml  requirements.txt  run.slrm  run_benchmark.py  run_benchmark.sh  run_measure.slrm  run_one.sh  run_one.slurm  run_viterbi.py  sleep_data_10states.json  slurm_system.yaml  systems.conf  systems.json  tensor_viterbi.py  (+7 more)
benchlib/: __init__.py  check.py  cli.py  compileflow.py  execution.py  flags.py  likwid.py  lock.py  manifest.py  params.py  paths.py  plotting.py  requirements.py  status.py  systemsconf.py
cpp_src/src/: hsmm.cu  hsmm.hpp  main.cpp
cpp_version/: Makefile  tensor-viterbi
cpp_version/src/: HSMM.cpp  HSMM.hpp  hsmm.cpp  hsmm.cu  hsmm.hpp  kernels.cu  kernels.cuh  main.cpp  sleep_data.json
data/: 10states_100000steps_1000dur.json  10states_100000steps_100dur.json  10states_100000steps_250dur.json  10states_100000steps_5000dur.json  10states_100000steps_500dur.json  10states_10000steps_1000dur.json  10states_10000steps_100dur.json  10states_10000steps_250dur.json  10states_10000steps_5000dur.json  10states_10000steps_500dur.json  10states_1000steps_1000dur.json  10states_1000steps_100dur.json  10states_1000steps_250dur.json  10states_1000steps_5000dur.json  10states_1000steps_500dur.json  15states_100000steps_1000dur.json  15states_100000steps_100dur.json  15states_100000steps_250dur.json  15states_100000steps_5000dur.json  15states_100000steps_500dur.json  15states_10000steps_1000dur.json  15states_10000steps_100dur.json  15states_10000steps_250dur.json  15states_10000steps_5000dur.json  15states_10000steps_500dur.json  15states_1000steps_1000dur.json  15states_1000steps_100dur.json  15states_1000steps_250dur.json  15states_1000steps_5000dur.json  15states_1000steps_500dur.json  16states_100000steps_1000dur.json  16states_10000steps_200dur.json  16states_1000steps_100dur.json  16states_100steps_10dur.json  20states_100000steps_200dur.json  20states_10000steps_100dur.json  20states_1000steps_20dur.json  20states_100steps_10dur.json  25states_100000steps_1000dur.json  25states_100000steps_100dur.json  (+63 more)
hsmmlearn/: setup.py
hsmmlearn/hsmmlearn/: base.cpp
hsmmlearn_omp/: .gitignore  setup.py
hsmmlearn_omp/hsmmlearn_omp/: base.cpp
logs/leonardo/: 10s_1000d_10000t.csv  10s_1000d_1000t.csv  10s_100d_100000t.csv  10s_100d_10000t.csv  10s_100d_1000t.csv  10s_250d_100000t.csv  10s_250d_10000t.csv  10s_250d_1000t.csv  10s_500d_10000t.csv  10s_500d_1000t.csv  15s_1000d_10000t.csv  15s_1000d_1000t.csv  15s_100d_100000t.csv  15s_100d_10000t.csv  15s_100d_1000t.csv  15s_250d_10000t.csv  15s_250d_1000t.csv  15s_500d_10000t.csv  15s_500d_1000t.csv  25s_1000d_1000t.csv  25s_100d_10000t.csv  25s_100d_1000t.csv  25s_250d_10000t.csv  25s_250d_1000t.csv  25s_500d_1000t.csv  50s_1000d_1000t.csv  50s_100d_10000t.csv  50s_100d_1000t.csv  50s_250d_1000t.csv  50s_500d_1000t.csv  75s_100d_1000t.csv  75s_250d_1000t.csv  75s_500d_1000t.csv
plot/: plot_all.py  plot_energy.py  plot_energy_bar.py  plot_likwid.py  plot_mc_gpu.py  plot_performance_bar.py  plot_sc.py  plot_speedup.py  plot_speedup_heatmap.py  plot_stress.py
py_src/: hsmm.py  tensor_viterbi.py
python_version/: sleep_data.json  tensor_viterbi.py  tensor_viterbi_new.py  validate_algorithm.py
results/a100/: 10s_1000d_10000t.out  10s_1000d_1000t.out  10s_100d_10000t.out  10s_100d_10000t_decode_tensor_viterbi_cuda.csv  10s_100d_1000t.out  10s_100d_1000t_decode_tensor_viterbi_cuda.csv  10s_250d_10000t.out  10s_250d_10000t_decode_tensor_viterbi_cuda.csv  10s_250d_1000t.out  10s_500d_10000t.out  10s_500d_1000t.out  15s_1000d_10000t.out  15s_1000d_1000t.out  15s_100d_10000t.out  15s_100d_1000t.out  15s_250d_10000t.out  15s_250d_1000t.out  15s_500d_10000t.out  15s_500d_1000t.out  25s_1000d_10000t.out  25s_1000d_1000t.out  25s_100d_10000t.out  25s_100d_1000t.out  25s_250d_10000t.out  25s_250d_1000t.out  25s_250d_1000t_decode_tensor_viterbi_cuda.csv  25s_500d_10000t.out  25s_500d_10000t_decode_tensor_viterbi_cuda.csv  25s_500d_1000t.out  50s_1000d_10000t.out  50s_1000d_1000t.out  50s_100d_10000t.out  50s_100d_1000t.out  50s_100d_1000t_decode_tensor_viterbi_cuda.csv  50s_250d_10000t.out  50s_250d_10000t_decode_tensor_viterbi_cuda.csv  50s_250d_1000t.out  50s_500d_10000t.out  50s_500d_1000t.out  50s_500d_1000t_decode_tensor_viterbi_cuda.csv  (+12 more)
results/epyc-7763-bigmem/: 10s_1000d_10000t.out  10s_1000d_10000t_decode_tensor_viterbi_omp.csv  10s_1000d_1000t.out  10s_1000d_1000t_HSMMLearn_OMP.csv  10s_100d_10000t.out  10s_100d_10000t_HSMMLearn_CPP.csv  10s_100d_10000t_HSMMLearn_OMP.csv  10s_100d_1000t.out  10s_100d_1000t_decode_tensor_viterbi_cpp.csv  10s_250d_10000t.out  10s_250d_1000t.out  10s_250d_1000t_HSMMLearn_OMP.csv  10s_500d_10000t.out  10s_500d_10000t_decode_tensor_viterbi_omp.csv  10s_500d_1000t.out  15s_1000d_10000t.out  15s_1000d_10000t_HSMMLearn_CPP.csv  15s_1000d_1000t.out  15s_1000d_1000t_decode_tensor_viterbi_cpp.csv  15s_100d_10000t.out  15s_100d_10000t_HSMMLearn_CPP.csv  15s_100d_1000t.out  15s_100d_1000t_HSMMLearn_CPP.csv  15s_100d_1000t_decode_tensor_viterbi_omp.csv  15s_250d_10000t.out  15s_250d_10000t_decode_tensor_viterbi_cpp.csv  (+60 more)
src/: Makefile  bindings.cpp  hsmm.cu  hsmm.hpp  kernels.cu  kernels.cuh  main.cpp  tensor-viterbi
systems/: TEMPLATE.yaml  a100.yaml  b200.yaml  epyc-7763-bigmem.yaml  epyc-7a53.yaml  epyc-9474f.yaml  gh200-grace.yaml  gh200-hopper.yaml  h100.yaml  h200.yaml  mi250x.yaml  mi300x.yaml  ryzen-ai-9.yaml  xeon8480.yaml
tensor_viterbi/: __init__.py  fasta.py  hsmm.py  metrics.py
tests/: test_bench.py
validation/: baseline_paths.py  hsmmlearn_omp_viterbi.py  hsmmlearn_py_viterbi.py  hsmmlearn_viterbi.py  sleep_data.json
(+4133 files in other folders)
