[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "tensor-viterbi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "deprecated",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["tensor_viterbi"]

[tool.scikit-build.cmake.define]
CMAKE_CUDA_ARCHITECTURES = "80"
